investigate and fix the invert_trs warnings from geocache-j21, notes/issues/invert_trs_nmat4triple_warnings_deferredCreateGPartsTest.rst cause was epsilon straddlers not being handled well by nglmext::compDiff2

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -44,6 +44,8 @@ set(TEST_SOURCES
     GGeoNCSGTest.cc
 
 
+    deferredCreateGPartsTest.cc
+
     BoundariesNPYTest.cc
     GAttrSeqTest.cc
     GBBoxMeshTest.cc
