okop/tests/OpFlightPathTest.cc using flightpath machinery for tours of geometry

--- a/okop/tests/CMakeLists.txt
+++ b/okop/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TEST_SOURCES
     dirtyBufferTest
     compactionTest
     OpSnapTest.cc
+    OpFlightPathTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
