rename to examples/UseOptiXExample to avoid confusion with new optixrap/tests/UseOptiX.cc as UseOptiX needs to be always available

--- a/examples/UseOptiXExample/CMakeLists.txt
+++ b/examples/UseOptiXExample/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name UseOptiX)
+set(name UseOptiXExample)
 project(${name})
 include(OpticksBuildOptions)
 
