GGeoDump and improved GParts accessors in prep for translation to CSGFoundry tests in https://github.com/simoncblyth/CSGOptiXGGeo/

--- a/ggeo/CMakeLists.txt
+++ b/ggeo/CMakeLists.txt
@@ -89,6 +89,7 @@ set(SOURCES
 
     GPropertyMap.cc
     GPho.cc
+    GGeoDump.cc
 
 )
 
@@ -176,6 +177,7 @@ set(HEADERS
 
     GPropertyMap.hh
     GPho.hh
+    GGeoDump.hh
 )
 
 if(YoctoGLRap_FOUND)
