handle pre-7 and 7 in FindOpticksOptiX.cmake, more GParts accessors needed for CSGOptiXGGeo/Converter

--- a/examples/UseBCM/CMakeLists.txt
+++ b/examples/UseBCM/CMakeLists.txt
@@ -1,45 +1,26 @@
 cmake_minimum_required(VERSION 3.5)
 set(name UseBCM)
 project(${name} VERSION 0.1.0)
-include(OpticksBuildOptions)
 
-#find_package(BCM)
+find_package(BCM)
 
 message( STATUS "BCM_FOUND  : ${BCM_FOUND} ")
 message( STATUS "BCM_CONFIG : ${BCM_CONFIG} ")
 
 #[=[
 
-Initially 
-   /usr/local/opticks-cmake-overhaul/share/bcm/cmake/BCMConfig.cmake 
+BCMConfig.cmake::
 
-But after changing bcm-prefix now install into externals 
-    /usr/local/opticks-cmake-overhaul/externals/share/bcm/cmake/BCMConfig.cmake 
+    epsilon:UseBCM blyth$ find /usr/local/opticks -name BCMConfig.cmake
+    /usr/local/opticks/externals/bcm/bcm/share/bcm/cmake/BCMConfig.cmake
+    /usr/local/opticks/externals/share/bcm/cmake/BCMConfig.cmake
 
-Its more logical to place BCM in PREFIX/externals/share not in PREFIX/share 
-as for opticks variants the typical action is to symbolic link 
+So BCM gets found via::
 
-::
-
-    epsilon:opticks-cmake-overhaul blyth$ l
-    total 8
-    drwxr-xr-x  407 blyth  staff  - 13024 May 24 15:12 lib
-    drwxr-xr-x   36 blyth  staff  -  1152 May 24 15:12 build
-    drwxr-xr-x    5 blyth  staff  -   160 May 24 13:44 installcache
-    drwxr-xr-x   28 blyth  staff  -   896 May 23 22:30 include
-    drwxr-xr-x   20 blyth  staff  -   640 May 23 18:38 gl
-    drwxr-xr-x    3 blyth  staff  -    96 May 21 21:18 geocache
-    -rw-r--r--    1 blyth  staff  -    94 May 21 16:06 OpticksIDPATH.log
-    lrwxr-xr-x    1 blyth  staff  -    22 May 21 16:06 opticksdata -> ../opticks/opticksdata
-    drwxr-xr-x    7 blyth  staff  -   224 May 15 19:13 config
-    lrwxr-xr-x    1 blyth  staff  -    20 May 15 16:31 externals -> ../opticks/externals
-    epsilon:opticks-cmake-overhaul blyth$     
-
-
-
-So it gets found via 
     CMAKE_PREFIX_PATH=$(opticks-prefix)/externals  
-rather than 
+
+rather than::
+
     CMAKE_INSTALL_PATH=$(opticks-prefix)
 
 
