fix GParts:add which was omitting to offset the tranform indices in combination, changes motivated by CSGOptiXGGeo

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ set(TEST_SOURCES
     GTreePresentTest.cc
     GCSGTest.cc
     GPartsTest.cc
+    GPartsCreateTest.cc
     GPtsTest.cc
     GPtTest.cc
     GGeoNCSGTest.cc
