for using CRecorder with G4OpticksRecorder add CManager to act as middle manager that can be used both from CG4 and G4OpticksRecorder

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -123,6 +123,8 @@ set(SOURCES
     CProcessSwitches.cc
     CG4Ctx.cc
     CG4.cc
+    CManager.cc
+
     C4FPEDetection.cc
     CRayTracer.cc
     CVis.cc
@@ -254,6 +256,9 @@ set(HEADERS
     CProcessSwitches.hh
     CG4Ctx.hh
     CG4.hh
+    CManager.hh
+
+
     C4FPEDetection.hh
     CGenstepCollector.hh
 
