primary vertex formatting

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -67,6 +67,7 @@ set(SOURCES
     CPoi.cc
     CRec.cc
 
+    CPrimaryVertex.cc
     CThreeVector.cc
     CEvent.cc
     CTrack.cc
@@ -214,6 +215,7 @@ set(HEADERS
     CRec.hh
 
 
+    CPrimaryVertex.hh
     CThreeVector.hh
     CEvent.hh
     CTrack.hh
