CKM Scintillation tests indicate that need to keep S+C+T gensteps chunks alive for genstep chunking to work as Geant4 intermingles the propagation of these

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -107,6 +107,7 @@ set(SOURCES
     CPhoton.cc
     CAction.cc
     CWriter.cc
+    CGenstep.cc
 
     CDetector.cc
     CGDMLDetector.cc
@@ -217,6 +218,8 @@ set(HEADERS
     CStp.hh
     CRec.hh
 
+    CWriter.hh
+    CGenstep.hh
 
     CPrimaryVertex.hh
     CThreeVector.hh
