--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -57,6 +57,8 @@ set(TEST_SOURCES
     CGDMLKludgeTest.cc
     CTrackInfoTest.cc 
 
+    CGenstepTest.cc
+
 )
 
 # generate targets for these, but dont add_test 
