maybe need to keep more than one of S+C alive for genstep chunking to work

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -37,6 +37,8 @@ set(SOURCES
     DsG4CompositeTrackInfo.cc
     CTrk.cc
     CTrackInfo.cc
+    CPho.cc 
+    CPhotonInfo.cc
     CEventInfo.cc
 
     CCerenkov.cc
@@ -188,6 +190,9 @@ set(HEADERS
 
     CTrk.hh
     CTrackInfo.hh
+    CPho.hh
+    CPhotonInfo.hh
+
     CEventInfo.hh
 
     CCerenkov.hh
