CPho reemission generation tracking

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ set(TEST_SOURCES
     CMakerTest.cc
     CTreeJUNOTest.cc
 
+    CPhoTest.cc
     CPhotonTest.cc
     CRandomEngineTest.cc
     CAlignEngineTest.cc
