investigate how to bring the Geant4 fallback calculation of RAYLEIGH scattering lengths for G4Material named "Water" without a RAYLEIGH scattering length property to Opticks

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -71,6 +71,8 @@ set(SOURCES
     X4SolidStore.cc
 
     X4Material.cc
+    X4MaterialWaterStandalone.cc
+    X4MaterialWater.cc
     X4MaterialTable.cc
     X4MaterialPropertiesTable.cc
 
@@ -129,6 +131,8 @@ set(HEADERS
     X4SolidStore.hh
 
     X4Material.hh
+    X4MaterialWaterStandalone.hh
+    X4MaterialWater.hh
     X4MaterialTable.hh
     X4MaterialPropertiesTable.hh
 
