--- a/qudarap/tests/CMakeLists.txt
+++ b/qudarap/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ set(TEST_SOURCES
    QTexRotateTest.cc
    QRngTest.cc
    QGenTest.cc
-   #QScintTest.cc
+   QScintTest.cc
    QPolyTest.cc
    QCtxTest.cc
    QBndTest.cc 
@@ -20,7 +20,6 @@ foreach(SRC ${TEST_SOURCES})
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
     add_test(${name}.${TGT} ${TGT})
-    #add_dependencies(check ${TGT})
     target_link_libraries(${TGT} QUDARap )
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
@@ -33,7 +32,6 @@ foreach(CU ${TEST_SOURCES_CU})
     get_filename_component(TGT ${CU} NAME_WE)
     cuda_add_executable(${TGT} ${CU} OPTIONS)
     add_test(${name}.${TGT} ${TGT})
-    #add_dependencies(check ${TGT})
 
     target_link_libraries(${TGT} QUDARap )
     install(TARGETS ${TGT} DESTINATION lib)
