reproduce the scintillation integration in X4ScintillationIntegral::Integral

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -100,7 +100,7 @@ set(SOURCES
     X4PhysicalVolume.cc
     X4Sample.cc
 
-    
+    X4ScintillationIntegral.cc 
 
     X4OpNoviceMaterials.cc
     OpNoviceDetectorConstruction.cc
@@ -164,6 +164,9 @@ set(HEADERS
     X4RotationMatrix.hh
     X4PhysicalVolume.hh
     X4Sample.hh
+
+    X4ScintillationIntegral.hh
+
 
     X4OpNoviceMaterials.hh
     OpNoviceDetectorConstruction.hh
