--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -39,6 +39,8 @@ set(TEST_SOURCES
 
     X4PhysicsOrderedFreeVectorTest.cc
     X4MaterialPropertyVectorTest.cc
+
+    X4ScintillationIntegralTest.cc
 )
 
 
