--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -40,7 +40,7 @@ set(TEST_SOURCES
     X4PhysicsOrderedFreeVectorTest.cc
     X4MaterialPropertyVectorTest.cc
 
-    X4ScintillationIntegralTest.cc
+    X4ScintillationTest.cc
 )
 
 
