attempt to avoid slow initialization when have many thousands of surfaces using SLabelCache in X4, see notes/issues/zike_reports_slow_surface_initization_with_geant4_1071_when_have_thousands_of_surfaces.rst

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -75,6 +75,7 @@ set(SOURCES
     CheckGeo.cc
 
     SGLM.cc
+    SLabelCache.cc
 ) 
 
 set(HEADERS
@@ -137,6 +138,7 @@ set(HEADERS
 
     CheckGeo.hh
     SGLM.hh
+    SLabelCache.hh
     scuda.h
 )
 
