Cerenkov photon energy sampling via inverse CDF for many BetaInverse in a 2d texture looks like it might work, prototyping in ana/rindex.py

--- a/qudarap/CMakeLists.txt
+++ b/qudarap/CMakeLists.txt
@@ -34,6 +34,9 @@ set(SOURCES
     QScint.cc
     QScint.cu
 
+    QCerenkov.cc
+    QCerenkov.cu 
+
     QPoly.cc
     QPoly.cu
 
@@ -55,6 +58,9 @@ SET(HEADERS
     QTex.hh
     QBnd.hh
     QScint.hh
+    QCerenkov.hh
+
+
     QPoly.hh
     QCtx.hh
 
