--- a/qudarap/tests/CMakeLists.txt
+++ b/qudarap/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
    QRngTest.cc
    QGenTest.cc
    QScintTest.cc
+   QCerenkovTest.cc
    QPolyTest.cc
    QCtxTest.cc
    QBndTest.cc 
